--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.3",
     "dotenv": "^14.2.0",
@@ -22,8 +24,11 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "latest": "^0.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "uuid": "^8.3.2"
   }
 }
